--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,8 @@
 
-* {
-    padding: 10;
-    margin: 50;
-    box-sizing: border-box;
-}
-
   
   body{
-    background-color: rgb(42, 42, 42);
+    background-color: #0B0A10;
     color: white;
-    min-height: 100vh;
     font-family: 'josefin-sans';
     display: grid;
     place-content: center;
@@ -18,21 +11,58 @@
 
 
   p {
-    font-size: 3rem;
+    font-size: 1rem;
   }
 
+  h1{
+    font-size: 5.3rem;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: italic;
+    color: #F7F7F7;
+
+    margin: 10px;
+  }
+
+  h2{
+    font-size: 2rem;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    color: #00C8FF;
+
+    margin: 10px;
+  }
+
+  h3{
+    font-size: 2.4rem;
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    color: #F7F7F7;
+
+    margin: 10px;
+  }
 
   .grid-container{
-    max-width: 900px;
-    margin: 1rem;
-    padding: 2rem;
+    max-width: 1200px;
+    margin: 2rem;
     display: grid;
     grid-auto-columns: 1fr;
-    gap: 1rem;
+    grid-gap: 1rem;
     grid-template-areas: 
-      "box1 box2 box9 box9 box7 box7 box5"
-      "box1 box6 box6 box6 box7 box7 box3"
-      "box1 box6 box6 box6 box4 box4 box8"    
+
+      "about    about     about     about     photo   photo   es        en"
+      "about    about     about     about     photo   photo   projects  projects"
+      "github   github    name      name      name    name    projects  projects"    
+      "art      art       name      name      name    name    itchio    itchio"    
+      "art      art       mail      mail      game    game    game      game"    
+      "skills   skills    skills    skills    game    game    game      game"    
+      "idk      idk       idk       idk       game    game    game      game"    
+      "idk      idk       idk       idk       game    game    game      game"    
     ;
   }
 
@@ -51,13 +81,15 @@
   }
 
   .grid-item{
-    background-color: #444;
-    padding: .5rem 1rem;
+    background-color: #1C1E23;
+    margin: 0;
+    padding: 2rem;
+    box-sizing: border-box;
+    border-radius: 0.75rem;
     text-align: center;
     place-content: center;
     display: flex;
     flex-direction: column;
-    border-radius: .75rem;
     overflow: hidden;
     transition: all 200ms ease;
   }
@@ -69,43 +101,97 @@
     outline: 1px solid #fff;
   }
 
-  .grid-item-1{
-    grid-area: box1;
+  .about{
+    grid-area: about;
+    aspect-ratio: 2 / 1;
   }
 
-  .grid-item-2{
-    grid-area: box2;
+  .photo{
+    grid-area: photo;
   }
 
-  .grid-item-3{
-    grid-area: box3;
+  .es{
+    grid-area: es;
+    aspect-ratio: 1 / 1;
   }
 
-  .grid-item-4{
-    grid-area: box4;
+  .en{
+    grid-area: en;
+    aspect-ratio: 1 / 1;
   }
 
-  .grid-item-5{
-    grid-area: box5;
+  .projects{
+    grid-area: projects;
   }
 
-  .grid-item-6{
-    grid-area: box6;
+  .github{
+    grid-area: github;
+    aspect-ratio: 2 / 1;
   }
 
-  .grid-item-7{
-    grid-area: box7;
+  .name{
+    grid-area: name;
   }
 
-  .grid-item-8{
-    grid-area: box8;
+  .art{
+    grid-area: art;
   }
 
-  .grid-item-9{
-    grid-area: box9;
+  .itchio{
+    grid-area: itchio;
+    aspect-ratio: 2 / 1;
   }
 
-  @font-face {
-    font-family: "josefin-sans";
-    src: url("https://lparres2000.github.io/SurvivalSpectrum/srcPaginaWeb/fonts/JosefinSans-Regular.ttf");
+  .mail{
+    grid-area: mail;
+    aspect-ratio: 2 / 1;
+  }
+
+  .game{
+    grid-area: game;
+    
+  }
+
+  .skills{
+    grid-area: skills;
+    aspect-ratio: 4 / 1;
+  }
+
+  .idk{
+    grid-area: idk;
+    aspect-ratio: 2 / 1;
+  }
+
+
+
+
+
+  /*Clases para las fuentes del proyecto*/
+
+  .josefin-sans-semibold-italic{
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: italic;
+  }
+
+  .josefin-sans-semibold{
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  .josefin-sans-regular{
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: italic;
+  }
+
+  .nunito-regular {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
   }
