--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
-
 /*#region Etiquetas*/
 
 body {
   background-color: #0B0A10;
-  display: grid;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 p {
@@ -50,6 +50,28 @@ h3 {
   margin: 10px;
 }
 
+h4 {
+  font-size: 2.5rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: italic;
+  color: #F7F7F7;
+
+  margin: 15px;
+}
+
+h5 {
+  font-size: 1rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: #F7F7F7;
+
+  margin: 10px;
+}
+
 /*#endregion*/
 
 
@@ -57,11 +79,14 @@ h3 {
 /*#region Clases principales*/
 
 .grid-container {
+  display: grid;
+
   max-width: 1200px;
   margin: 1rem;
-  display: grid;
+
   grid-auto-columns: 1fr;
   grid-gap: 1rem;
+  
   grid-template-areas:
 
     "about    about     about     about     photo   photo   es        en"
@@ -93,11 +118,35 @@ h3 {
   height: auto;
 }
 
-
 .grid-item:hover {
   cursor: pointer;
   background-color: #555;
   outline: 1px solid #fff;
+}
+
+.game-projects-title{
+  margin: 3rem;
+  text-align: center;
+}
+
+.game-projects-grid{
+  display: grid;
+
+  width:100%;
+  max-width: 1200px;  
+  
+  grid-template-rows: 300px 300px;
+  grid-template-columns: 1fr 1fr;
+
+  grid-gap: 1rem;
+
+}
+
+.projects-items{
+  padding: 0.5em;
+  background-color: #1C1E23;
+  border-radius: 0.75rem;
+  transition: all 200ms ease;
 }
 
 /*#endregion*/
@@ -109,7 +158,7 @@ h3 {
 .about {
   grid-area: about;
   aspect-ratio: 2 / 1;
-  
+
   padding: 35px;
   text-align: left;
   place-content: left;
@@ -155,7 +204,7 @@ h3 {
   grid-area: name;
 }
 
-.name h2{
+.name h2 {
   font-size: 1.5rem;
   margin: 10px;
 }
@@ -164,7 +213,7 @@ h3 {
   grid-area: art;
 }
 
-.art h3{
+.art h3 {
   font-size: 3rem;
 }
 
@@ -211,11 +260,10 @@ h3 {
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 1) 20%,
-    rgba(0, 0, 0, 1) 80%,
-    rgba(0, 0, 0, 0)
-  );
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1) 20%,
+      rgba(0, 0, 0, 1) 80%,
+      rgba(0, 0, 0, 0));
 }
 
 @keyframes scrollRight {
