--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,7 @@ h5 {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  transition: all 200ms ease;
+  position: relative;
 }
 
 .grid-item img {
@@ -118,10 +118,45 @@ h5 {
   height: auto;
 }
 
-.grid-item:hover {
-  cursor: pointer;
-  background-color: #555;
-  outline: 1px solid #fff;
+.interactable{
+  overflow: hidden;
+}
+
+.interactable::before{
+  position: absolute;
+  align-self: center;
+  content: '';
+  width: 30%;
+  height: 250%;
+  background: #53C264;
+  transform: rotate(45deg);
+  opacity: 0%;
+}
+
+.interactable:hover::before{
+  opacity: 100%;
+  animation: anim 2s linear infinite;
+}
+
+@keyframes anim{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+
+.interactable::after{
+  position: absolute;
+  content: '';
+  inset: 5px;
+  border-radius: 0.75rem;
+}
+
+.interactable:hover::after {
+  background-color: #2f3033;
 }
 
 .game-projects-title{
@@ -190,15 +225,36 @@ h5 {
   grid-area: projects;
 }
 
+.projects h3 {
+  z-index: 10;
+}
+
+.projects:hover{
+  cursor: pointer;
+  background-color: #2f3033;
+
+  box-shadow: 0px 0px 10px 1px #53C264
+}
+
 .github {
   grid-area: github;
   aspect-ratio: 2 / 1;
 }
 
 .github img {
+  align-self: center;
   max-width: 35%;
   height: auto;
+  z-index: 10;
 }
+
+.github:hover{
+  cursor: pointer;
+  background-color: #2f3033;
+
+  box-shadow: 0px 0px 10px 1px #53C264
+}
+
 
 .name {
   grid-area: name;
@@ -213,8 +269,16 @@ h5 {
   grid-area: art;
 }
 
+.art:hover{
+  cursor: pointer;
+  background-color: #2f3033;
+
+  box-shadow: 0px 0px 10px 1px #53C264
+}
+
 .art h3 {
   font-size: 3rem;
+  z-index: 10;
 }
 
 .itchio {
@@ -224,9 +288,22 @@ h5 {
   background-color: #FA5C5C;
 }
 
+.itchio:hover{
+  cursor: pointer;
+  background-color: #FA5C5C;
+
+  box-shadow: 0px 0px 10px 1px #53C264
+}
+
+.itchio:hover::after {
+  background-color: #FA5C5C;
+}
+
 .itchio img {
+  align-self: center;
   max-width: 35%;
   height: auto;
+  z-index: 10;
 }
 
 .mail {
@@ -243,7 +320,6 @@ h5 {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-
 }
 
 .skills {
