--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+:root {
+  --clr-light-text: #F7F7F7;
+  --clr-vivid-blue-title: #00C8FF;
+  --clr-vivid-blue-hover: #00C8FF;
+  --clr-dark-boxes-bg: #1C1E23;
+  --clr-dark-boxes-bg-hover: #2f3033;
+}
+
+
 /*#region Etiquetas*/
 
 body {
@@ -13,7 +22,7 @@ p {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  color: #F7F7F7;
+  color: var(--clr-light-text);
   line-height: 1.5;
 }
 
@@ -23,7 +32,7 @@ h1 {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: italic;
-  color: #F7F7F7;
+  color: var(--clr-light-text);
 
   margin: 10px;
 }
@@ -36,7 +45,7 @@ h2 {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  color: #00C8FF;
+  color: var(--clr-vivid-blue-title);
 }
 
 h3 {
@@ -45,7 +54,7 @@ h3 {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  color: #F7F7F7;
+  color: var(--clr-light-text);
 
   margin: 10px;
 }
@@ -56,7 +65,7 @@ h4 {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: italic;
-  color: #F7F7F7;
+  color: var(--clr-light-text);
 
   margin: 15px;
 }
@@ -67,7 +76,7 @@ h5 {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  color: #F7F7F7;
+  color: var(--clr-light-text);
 
   margin: 10px;
 }
@@ -101,7 +110,7 @@ h5 {
 }
 
 .grid-item {
-  background-color: #1C1E23;
+  background-color: var(--clr-dark-boxes-bg);
   margin: 0;
   box-sizing: border-box;
   border-radius: 0.75rem;
@@ -128,14 +137,14 @@ h5 {
   content: '';
   width: 30%;
   height: 250%;
-  background: #53C264;
+  background: var(--clr-vivid-blue-hover);
   transform: rotate(45deg);
   opacity: 0%;
 }
 
 .interactable:hover::before{
   opacity: 100%;
-  animation: anim 2s linear infinite;
+  animation: anim 4s linear infinite;
 }
 
 @keyframes anim{
@@ -151,12 +160,12 @@ h5 {
 .interactable::after{
   position: absolute;
   content: '';
-  inset: 5px;
+  inset: 4px;
   border-radius: 0.75rem;
 }
 
 .interactable:hover::after {
-  background-color: #2f3033;
+  background-color: var(--clr-dark-boxes-bg-hover);
 }
 
 .game-projects-title{
@@ -179,7 +188,7 @@ h5 {
 
 .projects-items{
   padding: 0.5em;
-  background-color: #1C1E23;
+  background-color: var(--clr-dark-boxes-bg);
   border-radius: 0.75rem;
   transition: all 200ms ease;
 }
@@ -214,11 +223,33 @@ h5 {
 .es {
   grid-area: es;
   aspect-ratio: 1 / 1;
+  background-image: url("../src/img/flag_spain.png");
+  background-position: center;
+  background-size: 100%;
+  transition: background-size 0.4s ease-out -0.1s;
+}
+
+.es:hover{
+  cursor: pointer;
+  border: solid 3px var(--clr-vivid-blue-hover);
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
+  background-size: 120%;
 }
 
 .en {
   grid-area: en;
   aspect-ratio: 1 / 1;
+  background-image: url("../src/img/flag_uk.svg");
+  background-position: center;
+  background-size: 100%;
+  transition: background-size 0.4s ease-out -0.1s;
+}
+
+.en:hover{
+  cursor: pointer;
+  border: solid 3px var(--clr-vivid-blue-hover);
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
+  background-size: 120%;
 }
 
 .projects {
@@ -231,9 +262,9 @@ h5 {
 
 .projects:hover{
   cursor: pointer;
-  background-color: #2f3033;
+  background-color: var(--clr-dark-boxes-bg-hover);
 
-  box-shadow: 0px 0px 10px 1px #53C264
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
 }
 
 .github {
@@ -250,9 +281,9 @@ h5 {
 
 .github:hover{
   cursor: pointer;
-  background-color: #2f3033;
+  background-color: var(--clr-dark-boxes-bg-hover);
 
-  box-shadow: 0px 0px 10px 1px #53C264
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
 }
 
 
@@ -271,9 +302,9 @@ h5 {
 
 .art:hover{
   cursor: pointer;
-  background-color: #2f3033;
+  background-color: var(--clr-dark-boxes-bg-hover);
 
-  box-shadow: 0px 0px 10px 1px #53C264
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover)
 }
 
 .art h3 {
@@ -291,8 +322,8 @@ h5 {
 .itchio:hover{
   cursor: pointer;
   background-color: #FA5C5C;
+  box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover)
 
-  box-shadow: 0px 0px 10px 1px #53C264
 }
 
 .itchio:hover::after {
@@ -332,7 +363,7 @@ h5 {
   max-width: 1536px;
   margin-inline: auto;
   position: relative;
-  height: 80px;
+  height: 70px;
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
@@ -349,12 +380,10 @@ h5 {
 }
 
 .skill {
-  width: 80px;
-  height: 80px;
-  background-color: red;
-  border-radius: 6px;
+  width: 70px;
+  height: 70px;
   position: absolute;
-  right: max(calc(100px * 8), 100%);
+  right: max(calc(100px * 6), 100%);
   animation-name: scrollRight;
   animation-duration: 20s;
   animation-timing-function: linear;
@@ -362,35 +391,27 @@ h5 {
 }
 
 .skill1 {
-  animation-delay: calc(20s / 8 * (8 - 1) * -1);
+  animation-delay: calc(20s / 6 * (6 - 1) * -1);
 }
 
 .skill2 {
-  animation-delay: calc(20s / 8 * (8 - 2) * -1);
+  animation-delay: calc(20s / 6 * (6 - 2) * -1);
 }
 
 .skill3 {
-  animation-delay: calc(20s / 8 * (8 - 3) * -1);
+  animation-delay: calc(20s / 6 * (6 - 3) * -1);
 }
 
 .skill4 {
-  animation-delay: calc(20s / 8 * (8 - 4) * -1);
+  animation-delay: calc(20s / 6 * (6 - 4) * -1);
 }
 
 .skill5 {
-  animation-delay: calc(20s / 8 * (8 - 5) * -1);
+  animation-delay: calc(20s / 6 * (6 - 5) * -1);
 }
 
 .skill6 {
-  animation-delay: calc(20s / 8 * (8 - 6) * -1);
-}
-
-.skill7 {
-  animation-delay: calc(20s / 8 * (8 - 7) * -1);
-}
-
-.skill8 {
-  animation-delay: calc(20s / 8 * (8 - 8) * -1);
+  animation-delay: calc(20s / 6 * (6 - 6) * -1);
 }
 
 .idk {
