--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+/*#region Color Variables*/
+
 :root {
   --clr-light-text: #F7F7F7;
   --clr-vivid-blue-title: #00C8FF;
@@ -5,6 +7,9 @@
   --clr-dark-boxes-bg: #1C1E23;
   --clr-dark-boxes-bg-hover: #2f3033;
 }
+
+/*#endregion*/
+
 
 
 /*#region Etiquetas*/
@@ -87,6 +92,9 @@ h5 {
 
 /*#region Clases principales*/
 
+
+/*#region Main Grid*/
+
 .grid-container {
   display: grid;
 
@@ -127,6 +135,11 @@ h5 {
   height: auto;
 }
 
+/*#endregion*/
+
+
+/*#region Interactables OnHover*/
+
 .interactable{
   overflow: hidden;
 }
@@ -162,11 +175,60 @@ h5 {
   content: '';
   inset: 4px;
   border-radius: 0.75rem;
+  pointer-events: none;
 }
 
 .interactable:hover::after {
   background-color: var(--clr-dark-boxes-bg-hover);
+  pointer-events: none;
 }
+
+/*#endregion*/
+
+
+/*#region Buttons About*/
+
+.container-buttons-about{
+  align-self: flex-end;
+  display: flex;
+
+}
+
+.button-about{
+  display: flex;
+  align-items: center;
+  margin-left: 2rem;
+  margin-top: 0.5rem;
+  padding: 0.6rem 1rem 0.6rem 1rem;
+  border-radius: 0.4rem;
+  background-color: var(--clr-light-text);
+  text-decoration: none;
+  
+}
+
+.button-about p{
+  margin: 0;
+  color: var(--clr-dark-boxes-bg);
+  font-size: 1.2rem;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.button-about:hover img{
+  width: 28px;
+  margin-left: 10px;
+}
+
+.button-about img{
+  width: 0px;
+  margin-left: 0px;
+  transition: width 0.2s ease-out 0s, margin-left 0.2s ease-out 0s;
+}
+
+/*#endregion*/
+
+
+/*#region Projects*/
 
 .game-projects-title{
   margin: 3rem;
@@ -196,8 +258,14 @@ h5 {
 /*#endregion*/
 
 
+/*#endregion*/
+
+
 
 /*#region Clases Bento Boxes*/
+
+
+/*#region About*/
 
 .about {
   grid-area: about;
@@ -211,6 +279,11 @@ h5 {
   flex-direction: column;
 }
 
+/*#endregion*/
+
+
+/*#region Photo*/
+
 .photo {
   grid-area: photo;
 
@@ -219,6 +292,11 @@ h5 {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/*#endregion*/
+
+
+/*#region Spanish*/
 
 .es {
   grid-area: es;
@@ -236,6 +314,11 @@ h5 {
   background-size: 120%;
 }
 
+/*#endregion*/
+
+
+/*#region English*/
+
 .en {
   grid-area: en;
   aspect-ratio: 1 / 1;
@@ -252,20 +335,32 @@ h5 {
   background-size: 120%;
 }
 
+/*#endregion*/
+
+
+/*#region Projects*/
+
 .projects {
   grid-area: projects;
 }
 
-.projects h3 {
+.projects a{
   z-index: 10;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  text-decoration: none;
 }
 
 .projects:hover{
-  cursor: pointer;
   background-color: var(--clr-dark-boxes-bg-hover);
-
   box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
 }
+
+/*#endregion*/
+
+
+/*#region Github*/
 
 .github {
   grid-area: github;
@@ -286,6 +381,10 @@ h5 {
   box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
 }
 
+/*#endregion*/
+
+
+/*#region Name*/
 
 .name {
   grid-area: name;
@@ -295,6 +394,11 @@ h5 {
   font-size: 1.5rem;
   margin: 10px;
 }
+
+/*#endregion*/
+
+
+/*#region Art*/
 
 .art {
   grid-area: art;
@@ -311,6 +415,11 @@ h5 {
   font-size: 3rem;
   z-index: 10;
 }
+
+/*#endregion*/
+
+
+/*#region Itchio*/
 
 .itchio {
   grid-area: itchio;
@@ -337,10 +446,20 @@ h5 {
   z-index: 10;
 }
 
+/*#endregion*/
+
+
+/*#region Mail*/
+
 .mail {
   grid-area: mail;
   aspect-ratio: 2 / 1;
 }
+
+/*#endregion*/
+
+
+/*#region Game*/
 
 .game {
   grid-area: game;
@@ -352,6 +471,11 @@ h5 {
   justify-content: flex-start;
   flex-direction: column;
 }
+
+/*#endregion*/
+
+
+/*#region Skills*/
 
 .skills {
   grid-area: skills;
@@ -414,10 +538,18 @@ h5 {
   animation-delay: calc(20s / 6 * (6 - 6) * -1);
 }
 
+/*#endregion*/
+
+
+/*#region Idk*/
+
 .idk {
   grid-area: idk;
   aspect-ratio: 2 / 1;
 }
+
+/*#endregion*/
+
 
 /*#endregion*/
 
