--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,11 @@ h5 {
   height: auto;
 }
 
+.section-title{
+  margin: 3rem;
+  text-align: center;
+}
+
 /*#endregion*/
 
 
@@ -148,9 +153,12 @@ h5 {
   position: absolute;
   align-self: center;
   content: '';
+  /*width: 60%;*/
   width: 30%;
   height: 250%;
+  /*background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(0, 200, 255, 0.9) 50%, rgba(255, 255, 255, 0));*/
   background: var(--clr-vivid-blue-hover);
+
   transform: rotate(45deg);
   opacity: 0%;
 }
@@ -230,11 +238,6 @@ h5 {
 
 /*#region Projects*/
 
-.game-projects-title{
-  margin: 3rem;
-  text-align: center;
-}
-
 .game-projects-grid{
   display: grid;
 
@@ -248,11 +251,34 @@ h5 {
 
 }
 
-.projects-items{
+.projects-item{
   padding: 0.5em;
   background-color: var(--clr-dark-boxes-bg);
   border-radius: 0.75rem;
-  transition: all 200ms ease;
+}
+
+/*#endregion*/
+
+
+/*#region Art*/
+
+.art-grid{
+  display: grid;
+
+  width:100%;
+  max-width: 1200px;  
+  
+  grid-template-rows: 300px 300px;
+  grid-template-columns: 1fr 1fr;
+
+  grid-gap: 1rem;
+
+}
+
+.art-item{
+  padding: 0.5em;
+  background-color: var(--clr-dark-boxes-bg);
+  border-radius: 0.75rem;
 }
 
 /*#endregion*/
@@ -367,15 +393,20 @@ h5 {
   aspect-ratio: 2 / 1;
 }
 
+.github a{
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  text-decoration: none;
+}
+
 .github img {
-  align-self: center;
   max-width: 35%;
   height: auto;
-  z-index: 10;
 }
 
 .github:hover{
-  cursor: pointer;
   background-color: var(--clr-dark-boxes-bg-hover);
 
   box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover);
@@ -404,8 +435,15 @@ h5 {
   grid-area: art;
 }
 
+.art a{
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  text-decoration: none;
+}
+
 .art:hover{
-  cursor: pointer;
   background-color: var(--clr-dark-boxes-bg-hover);
 
   box-shadow: 0px 0px 10px 1px var(--clr-vivid-blue-hover)
@@ -413,7 +451,6 @@ h5 {
 
 .art h3 {
   font-size: 3rem;
-  z-index: 10;
 }
 
 /*#endregion*/
@@ -428,6 +465,19 @@ h5 {
   background-color: #FA5C5C;
 }
 
+.itchio a{
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  text-decoration: none;
+}
+
+.itchio img {
+  max-width: 35%;
+  height: auto;
+}
+
 .itchio:hover{
   cursor: pointer;
   background-color: #FA5C5C;
@@ -439,12 +489,6 @@ h5 {
   background-color: #FA5C5C;
 }
 
-.itchio img {
-  align-self: center;
-  max-width: 35%;
-  height: auto;
-  z-index: 10;
-}
 
 /*#endregion*/
 
