--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,6 +333,12 @@ h5 {
   transition: background-size 0.4s ease-out -0.1s;
 }
 
+.es a{
+  width: 100%;
+  height: 100%;
+  align-content: center;
+}
+
 .es:hover{
   cursor: pointer;
   border: solid 3px var(--clr-vivid-blue-hover);
@@ -352,6 +358,12 @@ h5 {
   background-position: center;
   background-size: 100%;
   transition: background-size 0.4s ease-out -0.1s;
+}
+
+.en a{
+  width: 100%;
+  height: 100%;
+  align-content: center;
 }
 
 .en:hover{
@@ -498,6 +510,14 @@ h5 {
 .mail {
   grid-area: mail;
   aspect-ratio: 2 / 1;
+}
+
+.mail p{
+  font-size: 1.2rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: italic;
 }
 
 /*#endregion*/
