--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,22 +241,92 @@ h5 {
 .game-projects-grid{
   display: grid;
 
-  width:100%;
-  max-width: 1200px;  
-  
-  grid-template-rows: 300px 300px;
-  grid-template-columns: 1fr 1fr;
+  max-width: 1200px;
+  margin: 1rem;
 
+  grid-auto-columns: 1fr;
   grid-gap: 1rem;
-
+  
+  grid-template-areas:
+    "project1    project2"
+    "project3    project4"
+  ;
 }
+
+
 
 .projects-item{
-  padding: 0.5em;
   background-color: var(--clr-dark-boxes-bg);
+  margin: 0;
+  box-sizing: border-box;
   border-radius: 0.75rem;
+  text-align: center;
+  place-content: center;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  position: relative;
+  aspect-ratio: 2/1;
 }
 
+.project-image{
+  aspect-ratio: 1/1;
+  width: 296px;
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+  background-image: url("../src/img/hollenhaus2.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.project-info{
+  aspect-ratio: 1/1;
+  width: 296px;
+
+  padding: 30px;
+  text-align: left;
+  place-content: left;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.project-info h2{
+  font-size: 1.8rem
+}
+
+.project-info p{
+  font-size: 0.9rem
+}
+
+.project-tools{
+  margin: 15px 0px;
+}
+
+.project-tools img{
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+
+
+.project1{
+  grid-area: project1;
+}
+
+.project2{
+  grid-area: project2;
+}
+
+.project3{
+  grid-area: project3;
+}
+
+.project4{
+  grid-area: project4;
+}
 /*#endregion*/
 
 
