--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@
 
   --clr-light-text: #F7F7F7;
   --clr-title: #00C8FF;
-  --clr-hover: #53C264;
-  --clr-button: #53C264;
+  --clr-hover: #00C8FF;
+  --clr-button: #F7F7F7;
   --clr-dark-boxes-bg: #1C1E23;
   --clr-dark-boxes-bg-hover: #2f3033;
 }
@@ -249,6 +249,7 @@ h5 {
   align-self: center;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   width: 200px;
   height: 45px;
 }
@@ -283,7 +284,7 @@ h5 {
 .button-mail p{
   color: var(--clr-dark-boxes-bg);
   font-size: 1rem;
-  font-weight: 700;
+  font-weight: 800;
   font-style: normal;
 
   width: 0px;
@@ -310,11 +311,12 @@ h5 {
   width: 90px;
 }
 
-/* Para que haya feedback al pulsar el botón
-.button-mail:active{
-  border: 2px solid var(--clr-light-text);
-}
 
+/* Para que haya feedback al pulsar el botón */
+.button-mail:active{
+  border: 2px solid var(--clr-hover);
+}
+/*
 .button-mail:active p{
   color: var(--clr-light-text);
 }
@@ -362,7 +364,6 @@ h5 {
   width: 296px;
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
-  background-image: url("../src/img/hollenhaus2.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -397,11 +398,10 @@ h5 {
 }
 
 .project-tools{
-  margin: 15px 0px;
+  margin: 18px  0px 20px 0px;
 }
 
 .project-tools img{
-  width: 40px;
   height: 40px;
   margin-right: 10px;
 }
