--- a/style/style.css
+++ b/style/style.css
@@ -501,21 +501,54 @@ h5 {
 .art-grid{
   display: grid;
 
-  width:100%;
-  max-width: 1200px;  
-  
-  grid-template-rows: 300px 300px;
-  grid-template-columns: 1fr 1fr;
+  max-width: 1200px;
+  margin: 1rem;
 
+  grid-auto-columns: 1fr;
   grid-gap: 1rem;
+  
+  grid-template-areas:
+    "art1    art2"
+    "art3    art4"
+  ;
 
 }
 
 .art-item{
-  padding: 0.5em;
+  aspect-ratio: 16 / 9;
   background-color: var(--clr-dark-boxes-bg);
   border-radius: 0.75rem;
+
 }
+
+.art-item img{
+  width: 100%;
+  height: 100%;
+  border-radius: 0.75rem;
+}
+
+.art-item video{
+  width: 100%;
+  height: 100%;
+  border-radius: 0.75rem;
+}
+
+.art1{
+  grid-area: art1;
+}
+
+.art2{
+  grid-area: art2;
+}
+
+.art3{
+  grid-area: art3;
+}
+
+.art4{
+  grid-area: art4;
+}
+
 
 /*#endregion*/
 
